them validate du lieu khi register

--- a/src/main/webapp/register/success.html
+++ b/src/main/webapp/register/success.html
@@ -1,11 +1,12 @@
 <html>
 <head>
-    <title>Terms of Service</title>
+    <meta charset="UTF-8">
+    <title>Đăng ký thành công!</title>
 </head>
 <body>
 <div class="container">
-    <h2>Dang ky thanh cong</h2>
-    <h3><a href="/login">Dang nhap tai khoan</a></h3>
+    <h2>Đăng ký thành công!</h2>
+    <h3>Bấm vào đây để <a href="/">đăng nhập</a>.</h3>
 </div>
 </body>
 </html>
