--- a/src/main/webapp/register/terms-of-service.html
+++ b/src/main/webapp/register/terms-of-service.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-    <title>Register success!</title>
+    <meta charset="UTF-8">
+    <title>Điều khoản dịch vụ</title>
 </head>
 <body>
 <div class="container">
